# btec-pyqt-project

./: README.md  TechHouse.spec  about_membership.py  about_membership.ui  add_product.py  add_product.ui  admin_login.py  admin_login.ui  admin_menu.py  admin_menu.ui  cartWindow.py  checkout.py  checkout.ui  contact.py  contact.ui  form.ui  main.py  mainwindow.py  pyproject.toml  receipt.py  receipt.ui  receipt_history.py  receipt_manager.py  recipt_history.ui  shopping_cart.ui  ui_about_membership.py  ui_add_product.py  ui_admin_login.py  ui_admin_menu.py  ui_checkout.py  ui_contact.py  ui_form.py  ui_mainwindow.py  ui_receipt.py  ui_recipt_history.py  ui_shopping_cart.py  ui_ui_cart.py
data/: fake_products_100.json  recipes.json  users.json
